add navbar and jumbotron

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
 body{
+	padding-top: 20px;
+
+}
+.nav-justified{
+	background-color: #e5e5e5;
+	border-radius: 5px;
 	
 }
+ .nav-justified > li >a{
+ 	padding: 15px 0;
+ 	color: black;
+ 	text-align: center;
+
+ }
